Moje pierwsze luzne bez spiny laboratorium ^.^

--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Strona_napisami_plynaca</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+            <h1>08.10.2018 r.</h1>
+            <p>Mile napisy </p>
 </body>
 </html>
