--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-            <h1>08.10.2018 r.</h1>
-            <p>Mile napisy </p>
+<h1>08.10.2018 r.</h1>
+<p>Mile napisy </p>
+<ul>
+    <li>Strona glowna </li>
+    <li> Kontakt </li>
+    <li> Czat </li>
+</ul>
+
 </body>
 </html>
