--- a/index.html
+++ b/index.html
@@ -1,18 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <title>Strona_napisami_plynaca</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
-<h1>08.10.2018 r.</h1>
-<p>Mile napisy </p>
-<ul>
-    <li>Strona glowna </li>
-    <li> Kontakt </li>
-    <li> Czat </li>
-</ul>
+
+<div class="container-fluid">
+
+    <h1>08.10.2018 r.</h1>
+    <p>Mile napisy </p>
+    <ul>
+        <li>Strona glowna</li>
+        <li><a href="kontakt.html">kontakt</a></li>
+        <li> Czat</li>
+    </ul>
+    <div class="col-sm-9">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, cumque deserunt doloremque ducimus enim
+            error, explicabo harum in laboriosam nesciunt nisi quam quibusdam, quod sed similique sit suscipit tempore
+            voluptate.</p>
+    </div>
+
+
+</div>
 
 </body>
 </html>
