--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 
     <meta charset="UTF-8">
     <title>Strona_napisami_plynaca</title>
-    <link rel="stylesheet" href="style.css">
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -19,10 +20,20 @@
         <li><a href="kontakt.html">kontakt</a></li>
         <li> Czat</li>
     </ul>
-    <div class="col-sm-9">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, cumque deserunt doloremque ducimus enim
-            error, explicabo harum in laboriosam nesciunt nisi quam quibusdam, quod sed similique sit suscipit tempore
-            voluptate.</p>
+    <div class="row">
+
+        <div class="col-sm-8">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, cumque deserunt doloremque ducimus
+                enim
+                error, explicabo harum in laboriosam nesciunt nisi quam quibusdam, quod sed similique sit suscipit
+                tempore
+                voluptate.</p>
+        </div>
+        <div class="col-sm-3">
+            <img src="photo/obrazek.jpg" class="img-thumbnail" alt="zdjecie"/>
+        </div>
+
+
     </div>
 
 
