--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
 <div class="container-fluid">
 
     <h1>08.10.2018 r.</h1>
-    <p>Mile napisy </p>
+    <h2><p>Mile napisy </p></h2>
     <ul>
         <li>Strona glowna</li>
-        <li><a href="kontakt.html">kontakt</a></li>
+        <li><a href="index.html">Strona Główna</a></li>
+        <li><a href="kontakt.html">Kontakt</a></li>
+        <li><a href="Mapa.html">Mapa</a></li>
         <li> Czat</li>
     </ul>
     <div class="row">
