--- a/kontakt.html
+++ b/kontakt.html
@@ -12,8 +12,8 @@
 <ul>
 
     <li><a href="index.html">Strona Główna</a></li>
-    <li><a href="kontakt.html">kontakt</a></li>
-
+    <li><a href="kontakt.html">Kontakt</a></li>
+    <li><a href="Mapa.html">Mapa</a></li>
     <li> Czat </li>
 </ul>
 
