--- a/kontakt.html
+++ b/kontakt.html
@@ -25,6 +25,9 @@
             <label for="name">Imie:</label>
              <br/>
             <input id="name" name="name" placeholder="Podaj imię" required/>
+        <div class="info">
+
+        </div>
             <br/>
             <label for="surname">Nazwisko:</label>
              <br/>
@@ -64,13 +67,17 @@
             <option>Wdowa/Wdowiec</option>
             <select/>
             <br/>
+            <button type="button" class="btn btn-danger clear">Wyczyść</button>
+            <button type="button" class="btn btn-primary send">Wyślij</button>
+
 
     </fieldset>
+
 
 </form>
 
 
 
-
+<script src="script.js" type="text/javascript">    </script>
 </body>
 </html>
