--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
     <meta charset="UTF-8">
@@ -9,22 +10,26 @@
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-<div class="container-fluid">
+<button class="myButton" title="Wróć do góry">Góra</button>
 
-    <h1>08.10.2018 r.</h1>
-    <h2><p>Mile napisy </p></h2>
+<div class="container-fluid" >
+    <div class="przewin">
+
+    <h1>Mile napisy</h1>
+    <h2>08.10.2018 r. </h2>
     <ul>
         <li>Strona glowna</li>
         
         <li><a href="kontakt.html">Kontakt</a></li>
-        <li><a href="Mapa.html">Mapa</a></li>
+        <li><a href="mapa.html">Mapa</a></li>
         <li> Czat</li>
     </ul>
     <div class="row">
 
-        <div class="col-sm-8">
+        <div class="col-sm-8 paragraph">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, cumque deserunt doloremque ducimus
                 enim
                 error, explicabo harum in laboriosam nesciunt nisi quam quibusdam, quod sed similique sit suscipit
@@ -34,12 +39,10 @@
         <div class="col-sm-3">
             <img src="photo/obrazek.jpg" class="img-thumbnail" alt="zdjecie"/>
         </div>
-
-
     </div>
-
-
+  </div>
 </div>
 
+<script src="button.js" type="text/javascript"></script>
 </body>
 </html>
