--- a/kontakt.html
+++ b/kontakt.html
@@ -3,81 +3,84 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
-
+<button class="myButton" title="Wróć do góry">Góra</button>
+<div class="przewin">
 <ul>
 
     <li><a href="index.html">Strona Główna</a></li>
     <li><a href="kontakt.html">Kontakt</a></li>
-    <li><a href="Mapa.html">Mapa</a></li>
+    <li><a href="mapa.html">Mapa</a></li>
     <li> Czat </li>
 </ul>
 
 <form>
     <fieldset>
 
-        <legend>Uzupelnij dane:</legend>
-            <br/>
-            <label for="name">Imie:</label>
-             <br/>
-            <input id="name" name="name" placeholder="Podaj imię" required/>
-        <div class="info">
+        <legend>Uzupelnij dane:</legend>  <br/>
+      <div class="form-group">
+        <label for="name">Imie:</label>  <br/>
+        <input id="name" name="name" type="text" placeholder="Podaj imię" required/>  <br/>
+      </div>
 
-        </div>
-            <br/>
-            <label for="surname">Nazwisko:</label>
-             <br/>
-            <input id="surname" surname="surname" placeholder="Podaj nazwisko" required/>
-            <br/>
-            <label for="email">E-mail:</label>
-             <br/>
-            <input id="email" type="email" name="email" placeholder="Podaj email" required/>
-            <br/>
-            <label>Płeć</label>
-            <br/>
-            <input type="radio"
-                   name="sex"
-                   id="man"
-                   value="man"
-                   checked required/>
-        <label for="man">Mężczyzna</label>
-        <input type="radio"
-               name="sex"
-               id="woman"
-               value="woman" required/>
-        <label for="woman">Kobieta</label>
-        <br/>
-        <label for="description">Opis</label>
-        <br/>
-        <textarea id="description" name="description" cols="20" rows="3" required/></textarea>
-        <br/>
-        <label for="age">Wiek</label>
-        <br/>
-        <input type="number" name="age" id="age" min="18"/>
-        <br/>
-        <label for="maritial">Stan cywilny</label>
-        <br/>
+      <div class="form-group">
+        <label for="surname">Nazwisko:</label>  <br/>
+        <input id="surname" name="surname" type="text" placeholder="Podaj nazwisko" required/> <br/>
+      </div>
+
+      <div class="form-group">
+        <label for="email">E-mail:</label>  <br/>
+        <input id="email" type="email"  placeholder="Podaj email" required/>  <br/>
+      </div>
+
+      <div class="form-group">
+        <label>Płeć</label> <br/>
+
+         <label for="man">Mężczyzna</label>
+        <input type="radio" name="sex" id="man" value="man" checked required/>
+       <br/>
+          <label for="woman">Kobieta</label>
+          <input type="radio" name="sex" id="woman" value="woman" checked required/>
+      </div>
+
+       <div class="form-group">
+        <label for="description">Opis</label> <br/>
+
+        <textarea id="description" name="description" cols="20" rows="3" required/></textarea>  <br/>
+       </div>
+
+      <div class="from-row">
+        <label for="age">Wiek</label>   <br/>
+        <input type="number" id="age" min="1"/>  <br/>
+      </div>
+
+        <fieldset class="form-group">
+        <label for="maritial">Stan cywilny</label>   <br/>
         <select id="maritial" name="maritial" required>
             <option>Panna/Kawaler</option>
             <option>Mężatka/Żonaty</option>
             <option>Wdowa/Wdowiec</option>
-            <select/>
-            <br/>
+        </select>  <br/>
+        </fieldset>
+
+        <div class="form-row">
             <button type="button" class="btn btn-danger clear">Wyczyść</button>
             <button type="button" class="btn btn-primary send">Wyślij</button>
-
+        </div>
 
     </fieldset>
 
 
 </form>
 
+</div>
 
-
-<script src="script.js" type="text/javascript">    </script>
+<script src="script.js" type="text/javascript">  </script>
+<script src="button.js" type="text/javascript"></script>
 </body>
 </html>
