--- a/mapa.html
+++ b/mapa.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-<div class="container-fluid">
+<button class="myButton" title="Wróć do góry">Góra</button>
+<div class="przewin">
+
    <ul>
 
     <li><a href="index.html">Strona Główna</a></li>
@@ -16,17 +19,19 @@
     <li><a href="Mapa.html">Mapa</a></li>
     <li> Czat </li>
    </ul>
-</div>
+
 
 <div>
 
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2563.7719358388813!2d20.988116251648716!3d50.01562972637926!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473d8354fe68ac69%3A0xb016235c60a68f9e!2sPa%C5%84stwowa+Wy%C5%BCsza+Szko%C5%82a+Zawodowa!5e0!3m2!1spl!2spl!4v1540229962629"  height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2563.7719358388813!2d20.988116251648716!
+    3d50.01562972637926!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473d8354fe68ac69%3A0xb016235c60a68f9e!2sPa
+    %C5%84stwowa+Wy%C5%BCsza+Szko%C5%82a+Zawodowa!5e0!3m2!1spl!2spl!4v154022
+    9962629"  height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
 
 </div>
+</div>
 
-
+<script src="button.js" type="text/javascript"></script>
 </body>
-
-
 
 </html>
