--- a/index.html
+++ b/index.html
@@ -2,11 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Strona_napisami_plynaca</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Title</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="indexstyle.css"/>
 </head>
 <body>
-            <h1>08.10.2018 r.</h1>
-            <p>Mile napisy </p>
+
+        <div class="menu">
+
+            <p>Tolkien Quiz</p>
+
+            <button onclick="location.href='quiz.html'" class="button_start">Start</button>
+            <button class="button_history">History</button>
+
+
+
+        </div>
+        <div class="history_points">
+
+        </div>
+
+
+        <script src="history.js"></script>
+
 </body>
 </html>
